--- a/Tribute_Page/index.html
+++ b/Tribute_Page/index.html
@@ -1,4 +1,5 @@
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css">
 
 <div class="container">
  <div class="jumbotron text-center">
