--- a/Tribute_Page/index.html
+++ b/Tribute_Page/index.html
@@ -1,3 +1,4 @@
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css">
 
